# Prezence

./: README.md  avatar.sh  begin.sh  math  practice.sh  threading  time
Prezence/: avatar.sh  begin.sh  practice.sh  research  sys
central_proc/: config.txt  kinetic_feedback.txt  output_filenames.txt  serial.py  tailored_cp.cpp  tailored_cp.py
computer_vision/: computer_vision.cpp  skeleton_monitor.cpp
computer_vision/ros_catkin_ws/src/head_pose_monitor/: CMakeLists.txt
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/: _setup_util.py  setup.bash  setup.sh
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
computer_vision/ros_catkin_ws/src/head_pose_monitor/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
computer_vision/ros_catkin_ws/src/head_pose_monitor/launch/: head_pose_monitor.launch
computer_vision/ros_catkin_ws/src/head_pose_monitor/src/: head_pose_monitor.cpp
dummy_programs/: cv_gesture.py  speech_accuracy.py  speech_speed.py  speech_volume.py
kinetic_feedback/: sys  (+10 more)
ros_catkin_ws/src/skeleton_monitor/: CMakeLists.txt
(+717 files in other folders)
